# Raspi_Pico

./: README.md
midi_thr_print/: CMakeLists.txt  main.c  usb_descriptors.c
pwm_midi/: CMakeLists.txt  main.c  pwm.c  regtable.c  regtable.h  tusb_config.h  usb_descriptors.c
pwm_midi/buil/: pwm_midi.dis  pwm_midi.elf  pwm_midi.elf.map  pwm_midi.hex  pwm_midi.uf2
pwm_midi/buil/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
pwm_midi/buil/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
pwm_midi/buil/pico-sdk/src/rp2_common/boot_stage2/: bs2_default.dis  bs2_default_padded_checksummed.S
pwm_midi/buil/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/src/PioasmBuild-stamp/: PioasmBuild-source_dirinfo.txt
pwm_midi/buil/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: PioasmBuild-mkdirs.cmake
pwm_poly/: CMakeLists.txt  main.c  noteonch.c  noteonch.h  pwm.c  pwm.h  regtable.c  regtable.h  tusb_config.h  usb_descriptors.c
